# formatter

./: data.xlsx  inspect_out.txt  inspect_xlsx.py
backend/: .dockerignore  Dockerfile  main.py  processor.py  pyproject.toml  security.py  test_out.xlsx  test_processor.py
bankflow/: .dockerignore  Dockerfile  README.md  render.yaml
bankflow/backend/: .dockerignore  Dockerfile  main.py  processor.py  pyproject.toml
bankflow/frontend/: index.html  package.json
bankflow/frontend/src/: App.tsx  styles.css
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/backend-example/: main.py  requirements.txt
frontend/components/: file-uploader.tsx  macos-window.tsx  menu-bar-clock.tsx
