[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-multipart>=0.0.24",
    "uvicorn>=0.44.0",
]
