[project]
name = "bankflow-api"
version = "0.1.0"
description = "API para conciliación de extractos bancarios"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "xlsxwriter>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
